bug fixes - re-aligned footer-nav

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,13 @@ body {
   font-family: sans-serif;
   background-color: rgb(124, 149, 149);
   background-image: url("./img/grad-cap.png");
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
 }
 .header-container {
   position: fixed;
@@ -140,10 +146,11 @@ div .about-header-container {
   flex-direction: row;
   justify-content: baseline;
   margin: auto;
+  margin-left: 10%;
   padding: 5px 0;
   position: fixed;
   bottom: 5px;
-  width: 70%;
+  width: 60%;
 }
 .footer-nav-item {
   color: rgb(15, 12, 12);
@@ -224,7 +231,7 @@ article h3 {
 .notes-container {
   margin-top: 10px;
   /* margin: auto; */
-  width: 80%;
+  width: 90%;
 }
 article h3:hover {
   cursor: pointer;
